app/static/css/ringing_room.css
/* Global style */


body {
  overflow: auto;
  font-family: serif;
  background-color: #F0EAD6;
  font-size: 80%;
}

button {
    background-color: #F0EAD6;
    border-color: #007bff;
    border-width: 1px;
    color: black;
    padding: 0.1rem 0.5rem;
}

/* Override Marx's default post-click highlighting */
input[type=button]:focus,
button:focus {
  outline: none;
  -webkit-box-shadow: 0 0 0 0rem rgba(0, 123, 255, 0.5);
          box-shadow: 0 0 0 0rem rgba(0, 123, 255, 0.5); }

/* Override Marx's default post-click highlighting */
input[type=button]:disabled,
button:disabled {
    border-color: #555;
    background-color: #F0EAD6;
    color: #555;
      }

/* Sidebar */
    

.tower_header {
    position: relative;
    top: 0; /* Stay at the top */
    left: 0;
    overflow-x: hidden; /* Disable horizontal scroll */
    width: 100%;
    padding-top: 2rem;
    padding-bottom: 0;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    z-index: 3;
    background-color: #F0EAD6;
}

.tower_header .row:last-child {
    padding-bottom: 0.5rem;

}

.toggle_controls { visibility: visible; }

.tower_controls {
    position: relative;
    background-color: #F0EAD6;
    overflow: hidden; /* Disable horizontal scroll */
    width: 100%;
    transition: transform 0.2s ease-out;
    transform: scaleY(1);
    transform-origin: top;
    z-index: 2;
    font-size: x-large;
}

.size_control button {
    width: 100%;
}

.cur_size {
    background: #007bff;
}

.collapsed {
    transition: transform 0.2s ease-out;
    transform: scaleY(0);
    height: 0;
}

.maxed-col {
    max-width: 100%;
    min-width: 0;
}

.row {
    padding-bottom: 0.75rem; /* a bit more space between rows */
}

.row .tower_controls .row {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}

.row .row { /* don't add extra padding on embedded grids */
    padding-left: 0;
    padding-right: 0;
}

.row h1 { margin: 0; }

.row h3 { margin: 0; }

hr {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}


.user_list {
    
  display: table;
  border-width: 3px;
  border-left-style: solid;
  padding-left: 0px;
  margin-top: 0px;
  margin-left: 1rem;
  margin-top: 0.5rem;

}

.user_list li {
display: table;
width: 100%;
margin-left: 1rem;
padding: 0.25rem;
list-style-type: none;
font-size: large;
border-radius: 4px;
}

.observers {
    font-style: italic;
}

.user_list li.assignment_active{
        cursor: pointer;
    }

.user_list li.assignment_active.selected_user{
    background: rgba(0, 0, 255, 0.3);
}

.user_list .cur_user {
    font-weight: bold;
}

.toggle_assign {
  cursor: pointer;
}


.toggle_assign.active{
      background: rgba(255,0,0,0.3);
}


/* Username Input Form */

.un_input_form { 
  position: absolute;
  width: 19em;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
}

input.un_input_box {
  width: 80%;
  display: inline;

}

button.un_input_button {
    width: 20%;
    padding: 0.5rem;
    margin-bottom: 0.3rem;
}

fieldset {
  white-space: nowrap;
}

#join-message {
  width: 100%;
  font-size: smaller;

}


/* help bar */
.help {
  cursor: pointer;
}

.help_showing {
  max-width: 40rem;
  width: 100%;
  font-size: large;
  padding: 1rem;
  opacity: 1.0;
  border: 1px solid black;
  background-color: aliceblue;
  overflow-y: auto;
  text-align: left;
  left: 50%;
  margin-left: -20rem;
  font-size: smaller;
  position: fixed;
  z-index: 10;
  max-height: 70vh;

}


/* Bells */ 

.bell {
    padding: 0;
    white-space: nowrap;
    text-align: left;
    font-size: small;
    z-index: 1;
}

.bell .row{
    padding: 0;
}

.bell_metatdata{
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.bell_metadata .row{
    margin: 0;
}

.reverse .bell_metadata {
    text-align: right;
    direction: rtl;
}

.rope .rope_metadata .number.cur_user {
    color: blue;
}

.bell_metadata [class^="col-"] {
    padding: 0;
}

.bell_img.assignment_mode{
    opacity: 0.4;
}

.bell_metadata .assigned_user.cur_user {
   color: blue;
}

.unassign{
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.unassign:hover{
    color: red;
}

.number.treble, .number.treble.cur_user {
	color: #ff000d;
}

.handbell .bell_img {
  -webkit-transform: scale(1.5) translateY(-10%);
  transform: scale(1.5) translateY(-10%);

}

.handbell.left_side .bell_img {
  -webkit-transform: scale(1.5) scaleX(-1) translateY(-10%);
  transform: scale(1.5) scaleX(-1) translateY(-10%);
}


@media screen and (max-width: 650px){
    .help_showing{
        margin-left: 0;
        left: 0%;

    }
}

/* On larger screens, permantly open the menu */
@media screen and (min-width: 1028px){
    .tower_controls { 
        height: 100%;
        transform: scaleY(1);
        z-index: 0;
    }
    .maxed_col{
        max-width: 20rem;
        min-width: 20rem;
    }
    .toggle_controls{
        visibility: hidden;
        height: 0;
    }
    .final_hr{
        visibility: hidden;
    }
    .help_showing {
        left: 13.5rem;
        font-size: inherit;
        margin-left: 0;
        max-height: 75vh;
    }
}

